Release v1.37.0 Favorites Mobile API
